assets/css/style.css
/* General Styles */
* {
    padding: 0;
    margin: 0;
}

body {
    font-family: 'Merienda', cursive;
    background-color: #191717;
    display: flex;
    flex-direction: column;
    background: url("../images/joel-filipe-QwoNAhbmLLo-unsplash.webp") center center/cover;
}

h1,
h5 {
    padding: 5px 0 5px 0;
}


/* header styling */
#header {
    width: 100%;
    font-size: 1rem;
    background-color: #191717;
    color: #F1EFEF;
    text-align: center;
    
}


/* Score Section Styling */


#main-scores h3,
#round-scores h3,
#game-area h3,
#game-area h4,
#computer-choice h4 {
    text-align: center;
    margin-bottom: 5px;

}

#main-scores,
#round-scores,
#game-area {
    border: 2px solid #F1EFEF;
    /* background-color: #F1EFEF; */
    background-color: rgba(60, 60, 60, 0.4);
    padding: 0 5px 0 5px;
    border-radius: 5px;
    margin: 1%;
    color: #F1EFEF;
    font-weight: bold;
    

}

.score-container {
    display: flex;
    flex-direction: row;
}

.score-layout {
    width: 50%;
}

#controls {
    width: 100%;
    margin: 20px auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
}

#computer-choice {
    width: 85%;
    margin: 10px auto;
    text-align: center;
    
}


.btn {
    width: 150px;
    height: 50px;
    text-transform: uppercase;
    letter-spacing: 1.2px;
    color: white;
    
}

.btn:focus {
    outline: none;
}

.btn--big {
    padding-top: 5px;
    border-radius: 50%;
    /* background-color: white; */
    border: 6px solid;
    width: 60px;
    height: 60px;
    font-size: 2.2rem;
    margin: 0 15px;
    transition: all 0.5s;
    color: #191717;
}



.btn-red {
    border-color: red;
    color: red;
}

.btn-blue {
    border-color: blue;
    color: blue;
}

.btn-green {
    border-color: green;
    color: green;
}

.btn-purple {
    border-color: purple;
    color: purple;
}

.btn-orange {
    border-color: orange;
    color: orange;
}

.btn-slate-blue {
    border-color: slateblue;
    color: slateblue;
}

.btn-blue:active,
.btn-blue:hover {
    background-color: blue;
    color: white;
}

.btn-red:active,
.btn-red:hover {
    background-color: red;
    color: white;
}

.btn-green:active,
.btn-green:hover {
    background-color: green;
    color: white;
}

.btn-purple:active,
.btn-purple:hover {
    background-color: purple;
    color: white;
}

.btn-orange:active,
.btn-orange:hover {
    background-color: orange;
    color: white;
}

.btn-slate-blue:active,
.btn-slate-blue:hover {
    background-color: slateblue;
    color: white;
}

